syntax = "proto3";

package proto;

option go_package = "modules/grpc/pb";

import "pkg/modules/grpc/proto/general.proto";

service MetadataService {
    rpc SubscribeOnMetadata(DefaultRequest) returns (stream Metadata);
    rpc UnsubscribeFromMetadata(DefaultRequest) returns (Message);

    rpc GetMetadata(GetMetadataRequest) returns (Metadata);
    rpc ListMetadata(ListMetadataRequest) returns (ListMetadataResponse);
    rpc GetMetadataByMethodSinature(GetMetadataByMethodSinatureRequest) returns (ListMetadataResponse);
    rpc GetMetadataByTopic(GetMetadataByTopicRequest) returns (ListMetadataResponse);
}

message GetMetadataRequest {
    string id = 1;
    string address = 2;
}

message ListMetadataRequest {
    string id = 1;
    Page page = 2;
}

message ListMetadataResponse {
    repeated Metadata metadata = 1;
}

message Metadata {
    string address = 1;
    bytes metadata = 2;
    bytes json_schema = 3;
}

message GetMetadataByMethodSinatureRequest {
    string id = 1;
    Page page = 2;
    string signature = 3;
}

message GetMetadataByTopicRequest {
    string id = 1;
    Page page = 2;
    string topic = 3;
}